fix: Makes HostAbstract.getMigratableVms() return mutable list
Close #517

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>